# rules_verilog

./: BUILD.bazel  MODULE.bazel  README.md  version.bzl
.bcr/: metadata.template.json  source.template.json
.bcr/tools/bzl_version/: version_test.py
.github/: release_notes.template
.github/workflows/: ci.yml  lint.yml  release.yaml
tools/bzl_version/: version_test.py
verilog/: BUILD.bazel  defs.bzl  verilog_info.bzl  verilog_library.bzl
verilog/private/tests/: BUILD.bazel  dep_a.sv  dep_b.sv  invalid.txt  leaf.svh  top.sv  verilog_library_analysis_test.bzl
